# slosizer

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: Makefile  api.md  conf.py  data-requirements.md  examples.md  formalization.md  index.md  provider-adapters.md
docs/_build/doctrees/: data-requirements.doctree  environment.pickle  examples.doctree  formalization.doctree  index.doctree  provider-adapters.doctree
examples/: quickstart.py
examples/input/: synthetic_request_trace_baseline.csv  synthetic_request_trace_optimized.csv
src/slosizer/: __init__.py  _utils.py  app.py  ingest.py  planning.py  plotting.py  schema.py  simulation.py  synthetic.py
src/slosizer/providers/: __init__.py  azure.py  vertex.py
tests/: test_ingest.py  test_ingest_and_planning.py  test_planning.py  test_providers.py  test_simulation.py  test_utils.py
